update something new

--- a/src/app/auth/password-reset/password-reset.component.html
+++ b/src/app/auth/password-reset/password-reset.component.html
@@ -12,7 +12,7 @@
         <languages></languages>
       </div>
     </div>
-    <div class="w-full max-w-md sm:bg-surface sm:p-8 sm:rounded-md sm:sm:border border-solid border-light">
+    <div class="w-full max-w-md sm:bg-surface sm:py-10 sm:px-8 sm:rounded-md sm:sm:border border-solid border-light">
       <ng-container *ngIf="!isChanged">
         <div class="flex flex-col gap-3 text-center">
           <div class="font-medium  text-2xl">
@@ -131,7 +131,7 @@
             </mat-error>
           </mat-form-field>
           <button
-            class="w-full !mt-6 btn--lg"
+            class="w-full !mt-5 btn--lg"
             mat-flat-button
             [color]="'primary'"
             [disabled]="passwordResetForm.disabled"
@@ -163,7 +163,7 @@
           </div>
           <button
             type="button"
-            class="w-full !mt-6 btn--lg"
+            class="w-full !mt-5 btn--lg"
             mat-flat-button
             [color]="'primary'"
             routerLink="/login"
