--- a/src/app/modules/admin/users/user-profile-view/user-profile-view.component.html
+++ b/src/app/modules/admin/users/user-profile-view/user-profile-view.component.html
@@ -287,7 +287,7 @@
     <div class="w-full flex justify-end">
       <button
         type="button"
-        mat-flat-button
+        mat-button
         color="primary"
         class="btn--sm"
         [autoFocus]="true"
