--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -27,7 +27,7 @@
       </div>
     </div>
     <div
-      class="w-full max-w-md sm:bg-surface sm:p-8 sm:rounded-md sm:sm:border border-solid border-light"
+      class="w-full max-w-md sm:bg-surface sm:px-8 sm:py-10 sm:rounded-md sm:sm:border border-solid border-light"
     >
       <div class="font-medium text-2xl text-center">
         {{ "Login.Title" | translate }}
@@ -100,7 +100,7 @@
         </div>
         <button
           type="submit"
-          class="w-full !mt-6 btn--lg"
+          class="w-full !mt-5 btn--lg"
           mat-flat-button
           [color]="'primary'"
           [disabled]="loginForm.disabled"
@@ -116,7 +116,7 @@
           </mat-progress-spinner>
         </button>
       </form>
-      <div class="uppercase my-5 text-sm text-hint flex items-center gap-4">
+      <!-- <div class="uppercase my-5 text-sm text-hint flex items-center gap-4">
         <div
           class="border-0 border-t border-solid border-light flex-grow"
         ></div>
@@ -159,7 +159,7 @@
             </div>
           </div>
         </button>
-      </div>
+      </div> -->
     </div>
   </div>
   <div class="mt-auto text-hint text-sm text-center pb-4">
