--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -26,13 +26,13 @@
       </div>
     </div>
     <div
-      class="w-full max-w-md sm:bg-surface sm:p-8 sm:rounded-md sm:sm:border border-solid border-light"
+      class="w-full max-w-md sm:bg-surface sm:px-8 sm:py-10 sm:rounded-md sm:sm:border border-solid border-light"
     >
       <div class="font-medium text-2xl mb-2 text-center">
         {{ "Register.Title" | translate }}
       </div>
 
-      <div class="flex flex-col gap-3 mt-5">
+      <!-- <div class="flex flex-col gap-3 mt-5">
         <button mat-stroked-button class="w-full btn--lg relative bg-surface">
           <div class="flex items-center gap-4">
             <div class="absolute left-4 top-1/2 -mt-3">
@@ -76,7 +76,7 @@
         <div
           class="border-0 border-t border-solid border-light flex-grow"
         ></div>
-      </div>
+      </div> -->
 
       <form
         [formGroup]="registerForm"
@@ -220,11 +220,11 @@
           </mat-error>
         </mat-form-field>
         <div
-          class="mt-2 text-secondary"
+          class="text-secondary mt-1"
           [innerHTML]="'Register.Agreement' | translate"
         ></div>
         <button
-          class="w-full !mt-6 btn--lg"
+          class="w-full !mt-5 btn--lg"
           mat-flat-button
           [color]="'primary'"
           [disabled]="registerForm.disabled"
