--- a/src/app/modules/client/onboarding/student-profile/student-profile.component.html
+++ b/src/app/modules/client/onboarding/student-profile/student-profile.component.html
@@ -28,7 +28,7 @@
 
     <div class="w-full max-w-xl sm:px-6">
       <div class="font-medium  text-2xl text-center">
-        {{ "StudentProfile.StudentProfile" | translate }}
+        {{ "StudentProfile.Title" | translate }}
       </div>
       <form class="mt-8" [formGroup]="studentProfileForm" (ngSubmit)="submit()">
         <mat-form-field appearance="fill" class="w-full">
