--- a/src/app/modules/client/onboarding/tutor-profile/tutor-profile.component.html
+++ b/src/app/modules/client/onboarding/tutor-profile/tutor-profile.component.html
@@ -24,7 +24,7 @@
 
     <div class="w-full max-w-xl">
       <div class="font-medium text-2xl text-center mb-4">
-        {{ "TutorProfile.TutorProfile" | translate }}
+        {{ "TutorProfile.Title" | translate }}
       </div>
 
       <mat-stepper
