--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 
-@import "./tailwind/_tailwind-dir";
+@import "./tailwind/_tailwindcss-dir";
 
 @import "./material/_material-dir";
 
