--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -69,7 +69,7 @@
   ::before,
   ::after {
       --tw-border-opacity: 1 !important;
-      border-color: rgba(var(--fuse-border-rgb), var(--tw-border-opacity));
+      border-color: rgba(var(--border-rgb), var(--tw-border-opacity));
 
       .dark & {
           --tw-border-opacity: 0.12 !important;
