--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -4,31 +4,33 @@
   type="button"
   [matMenuTriggerFor]="userMenu"
 >
-  <div class="flex flex-col">
-    <img
-      *ngIf="userService.currentUserValue?.avatar"
-      class="w-8 h-8 rounded-full overflow-hidden"
-      [src]="userService.currentUserValue?.avatar"
-      alt=""
-    />
-    <div
-      *ngIf="!userService.currentUserValue?.avatar"
-      class="w-8 h-8 rounded-full overflow-hidden flex justify-center items-center font-medium bg-primary text-white uppercase"
-    >
-      {{ userService.currentUserValue?.name?.charAt(0) || "" }}
+  <div class="flex items-center">
+    <div class="flex flex-col">
+      <img
+        *ngIf="userService.currentUserValue?.avatar"
+        class="w-8 h-8 rounded-full overflow-hidden"
+        [src]="userService.currentUserValue?.avatar"
+        alt=""
+      />
+      <div
+        *ngIf="!userService.currentUserValue?.avatar"
+        class="w-8 h-8 rounded-full overflow-hidden flex justify-center items-center font-medium bg-primary text-white uppercase"
+      >
+        {{ userService.currentUserValue?.name?.charAt(0) || "" }}
+      </div>
     </div>
-  </div>
-  <div
-    *ngIf="userService.currentUserValue?.name"
-    class="ml-2 font-medium text-sm max-w text-current"
-  >
-    {{ userService.currentUserValue?.name }}
-  </div>
-  <div class="ml-2 flex items-center">
-    <mat-icon
-      svgIcon="mat_outline:expand_more"
-      class="icon-size-5 text-current"
-    ></mat-icon>
+    <div
+      *ngIf="userService.currentUserValue?.name"
+      class="ml-2 font-medium text-sm max-w text-current"
+    >
+      {{ userService.currentUserValue?.name }}
+    </div>
+    <div class="ml-2 flex items-center">
+      <mat-icon
+        svgIcon="mat_outline:expand_more"
+        class="icon-size-5 text-current"
+      ></mat-icon>
+    </div>
   </div>
 </button>
 
