--- a/src/app/modules/client/onboarding/tutor-profile/tutor-profile.component.html
+++ b/src/app/modules/client/onboarding/tutor-profile/tutor-profile.component.html
@@ -216,7 +216,7 @@
                   <div class="mt-2 flex justify-center">
                     <button
                       type="submit"
-                      class="btn btn--lg w-full"
+                      class="btn--lg w-full"
                       mat-flat-button
                       [color]="'primary'"
                       (click)="submitTutorBasicInfoForm()"
