--- a/src/app/modules/admin/users/users.component.html
+++ b/src/app/modules/admin/users/users.component.html
@@ -89,7 +89,7 @@
       </mat-form-field>
       <button
         mat-button
-        class="flex-shrink-0"
+        class="flex-shrink-0 mt-2"
         type="button"
         (click)="resetFilter()"
       >
@@ -297,7 +297,7 @@
           <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
           <tr class="mat-row" *matNoDataRow>
             <td
-              class="mat-cell text-center"
+              class="mat-cell text-center p-4"
               [attr.colspan]="displayedColumns.length"
             >
               {{ "Table.NoData" | translate }}
