--- a/src/app/modules/client/onboarding/tutor-profile/tutor-profile.component.html
+++ b/src/app/modules/client/onboarding/tutor-profile/tutor-profile.component.html
@@ -713,7 +713,7 @@
                       maxlength="1000"
                       appPreventAutoFill
                     ></textarea>
-                    <mat-hint class="w-full">
+                    <mat-hint class="w-full -mt-3">
                       <div class="text-right -mr-3">
                         {{
                           tutorIntroductionForm.get("introduction")?.value
