fixed some styles

--- a/src/app/modules/admin/users/users.component.html
+++ b/src/app/modules/admin/users/users.component.html
@@ -13,13 +13,12 @@
         matInput
         type="text"
         [placeholder]="'User.SearchPlaceholder' | translate"
-        name="search"
         [formControl]="searchInput"
         #search
       />
-      <button matPrefix type="button">
-        <mat-icon [svgIcon]="'mat_outline:search'"> </mat-icon>
-      </button>
+
+      <mat-icon matPrefix [svgIcon]="'mat_outline:search'"> </mat-icon>
+
       <button
         matSuffix
         mat-icon-button
