--- a/src/styles/overrides/_ngx-pagination.scss
+++ b/src/styles/overrides/_ngx-pagination.scss
@@ -10,7 +10,7 @@ pagination-controls {
     }
 
     .current {
-      @apply bg-primary text-on-primary;
+      @apply bg-primary text-white;
     }
   }
 }
